# HueShifter

./: .gitignore  CMakeLists.txt  README.md
include/color/LabCH/akin/: lab.hpp  xyz.hpp
include/color/LabCH/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  cmyk.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/LabCH/get/: get.hpp
include/color/LabCH/set/: blue.hpp  gray.hpp  green.hpp
include/color/LuvCH/akin/: lab.hpp  xyz.hpp
include/color/LuvCH/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  cmyk.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/LuvCH/get/: get.hpp
include/color/LuvCH/set/: blue.hpp  gray.hpp  green.hpp
include/color/YCgCo/akin/: lab.hpp
include/color/YCgCo/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  cmy.hpp  gray.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp
include/color/YCgCo/get/: blue.hpp  green.hpp
include/color/YDbDr/akin/: lab.hpp
include/color/YDbDr/convert/: LabCH.hpp  LuvCH.hpp  YDbDr.hpp  cmy.hpp  gray.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  rgb.hpp  xyy.hpp  xyz.hpp
include/color/YPbPr/akin/: lab.hpp  yuv.hpp
include/color/YPbPr/convert/: LabCH.hpp  LuvCH.hpp  YPbPr.hpp  cmy.hpp  gray.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp  yuv.hpp
include/color/YPbPr/set/: gray.hpp
include/color/_internal/: init.hpp  normalize.hpp  proxy.hpp
include/color/cmy/akin/: LuvCH.hpp  lab.hpp
include/color/cmy/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/cmy/get/: inphase.hpp  quadrature.hpp
include/color/cmy/set/: gray.hpp
include/color/cmyk/akin/: LuvCH.hpp  lab.hpp
include/color/cmyk/convert/: LabCH.hpp  LuvCH.hpp  cmyk.hpp  gray.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  rgb.hpp  xyy.hpp  xyz.hpp
include/color/generic/: constant.hpp
include/color/generic/akin/: lab.hpp
include/color/generic/compare/: different.hpp  equal.hpp  great_or_equal.hpp  great_strict.hpp  less_or_equal.hpp  less_strict.hpp
include/color/generic/operation/: addition.hpp  bias.hpp  blend.hpp  combine.hpp  convex.hpp  delta.hpp  distance.hpp  gain.hpp  gamma.hpp  invert.hpp  normalize.hpp  operation.hpp  operator.hpp  scale.hpp  subtract.hpp
include/color/generic/place/: key.hpp  place.hpp
include/color/generic/trait/: bound.hpp  info.hpp  size.hpp
include/color/generic/type/: rational.hpp  type.hpp
include/color/gray/akin/: lab.hpp
include/color/gray/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/hsi/akin/: lab.hpp
include/color/hsi/convert/: LabCH.hpp  LuvCH.hpp  gray.hpp  hsi.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp
include/color/hsl/akin/: lab.hpp
include/color/hsl/convert/: LabCH.hpp  LuvCH.hpp  cmy.hpp  gray.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp
include/color/hsv/akin/: lab.hpp
include/color/hsv/convert/: LabCH.hpp  LuvCH.hpp  cmy.hpp  gray.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp
include/color/hwb/akin/: lab.hpp  xyz.hpp
include/color/hwb/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  cmyk.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/hwb/get/: get.hpp  green.hpp  lightness.hpp  red.hpp
include/color/hwb/place/: place.hpp
include/color/hwb/set/: blue.hpp  gray.hpp  green.hpp
include/color/lab/akin/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  cmyk.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  rgb.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/lab/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  cmyk.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  (+8 more)
include/color/luv/: constant.hpp
include/color/xyz/: profile.hpp
include/color/yiq/: constant.hpp
include/glad/: glad.h
lib/: glfw3.lib
lib/Win32/: glad.lib  glfw3.lib  glfw3dll.lib
notes/: week10.txt  week8.txt  week9.txt
src/: Image.cpp  RenderObject.cpp  RenderObject.h  Slider.cpp  Slider.h  image.cpp  image.h  main.cpp
(+208 files in other folders)
